# FlappyBirdClone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  premake5.lua
FlappyBirdClone/include/: Bird.h  Ground.h  Pipe.h  RenderWindow.h  Utils.h  Vector.h
FlappyBirdClone/src/: Bird.cpp  Entity.cpp  Ground.cpp  Main.cpp  Pipe.cpp  RenderWindow.cpp  Vector.cpp
include/: Button.h  Entity.h  Utils.h  Vector.h
src/: Bird.cpp  Button.cpp  Entity.cpp  Ground.cpp  Main.cpp  Pipe.cpp  Vector.cpp
